# rust-celery-rust-client-py-worker-test

./: .gitignore  README.md  docker-compose.yml  flake.nix  justfile
py/: tasks.py
rust/: Cargo.toml
rust/src/: main.rs
