[package]
name = "celery-test"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.11"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
# celery = { git = "https://github.com/rksm/rusty-celery", rev = "92f0f350adf85695971487d59798ebcbe6337f74" } # fix for submitting tasks from rust to python
celery = { path = '/home/robert/projects/rust/libs/rusty-celery' }
tokio = "1.35.0"
tracing = "0.1.40"
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.4.11", features = ["derive", "env"] }
chrono = { version = "0.4.31", features = ["serde"] }

